# plane_remote

./: .mxproject  CMakeLists.txt  CMakePresets.json  STM32F103XX_FLASH.ld  plane_remote_control.ioc
.cache/clangd/index/: beep.c.9BA5AF68FE4C4C16.idx  beep.h.3A05034831345FE6.idx  bsp_delay.c.7F498FA45BDE34B2.idx  bsp_delay.h.F3B555C592B2E46C.idx  bsp_gpio.c.4741D23E8A46063D.idx  bsp_gpio.h.A53A327205CC1DD1.idx  bsp_iic.c.9D55A9DA8B37AA50.idx  bsp_iic.h.245AAFFEACDE1921.idx  cmsis_compiler.h.226809043A3B67D0.idx  cmsis_gcc.h.06775F77AB0E8B5C.idx  cmsis_version.h.823864921EA05511.idx  core_cm3.h.3B03CAB4CE7689FA.idx  gpio.c.B3E51EF0AE96589B.idx  gpio.h.42E20098401FD6C8.idx  headfile.h.96241467071836CE.idx  key.c.626D4A9273D57F0B.idx  key.h.AD69110E15940C19.idx  led.c.42EC129C77C7D97A.idx  led.h.ED6E4CC818D029BB.idx  main.c.A27D446B412D67C3.idx  main.h.7C9BAF65B41FEABC.idx  nrf24l01.c.59AC6E04267042A6.idx  nrf24l01.h.7062334CF11FD753.idx  spi.c.5C37C536C2D3B1C2.idx  spi.h.B5E494FE510B789B.idx  startup_stm32f103xb.s.D532E0CBDF001FF7.idx  stm32_hal_legacy.h.5FB4CBC328FB5441.idx  stm32f103xb.h.D9D699A428A9AC1B.idx  stm32f1xx.h.BE18AD42DE292BC7.idx  stm32f1xx_hal.c.4EBECC8A8C3EF2DD.idx  stm32f1xx_hal.h.D6464334B7605459.idx  stm32f1xx_hal_conf.h.80FCD61DCBDA1CC9.idx  stm32f1xx_hal_cortex.c.DFB4416F37F233E6.idx  stm32f1xx_hal_cortex.h.04250A6F1971576C.idx  stm32f1xx_hal_def.h.CAE85F7DDA9744C1.idx  stm32f1xx_hal_dma.c.C76A4697ED1A46F8.idx  stm32f1xx_hal_dma.h.6B51AF5D405EF6AC.idx  stm32f1xx_hal_dma_ex.h.5730772207121C87.idx  stm32f1xx_hal_exti.c.F903FDE0E81D3B5A.idx  stm32f1xx_hal_exti.h.986C417D4022246E.idx  (+25 more)
App/: headfile.h
App/remote/: remote.c  remote.h
App/task/: task.c  task.h
App/ui/: ui.c  ui.h
App/utils/: utils.c  utils.h
Bsp/delay/: bsp_delay.c  bsp_delay.h
Bsp/dwt/: bsp_dwt.c  bsp_dwt.h
Bsp/gpio/: bsp_gpio.c  bsp_gpio.h
Bsp/iic/: bsp_iic.c  bsp_iic.h
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: adc.c  freertos.c  gpio.c  main.c  spi.c
Modules/beep/: beep.c  beep.h
Modules/joystick/: joystick.c  joystick.h
Modules/key/: key.c  key.h
Modules/led/: led.c  led.h
Modules/nrf24l01/: nrf24l01.c  nrf24l01.h
Modules/oled/: oled.c  oled.h  oled_font.c  oled_font.h
Modules/oled/u8g2/: u8g2_d_setup.c
cmake/stm32cubemx/: CMakeLists.txt
